--- a/package.json
+++ b/package.json
@@ -12,8 +12,12 @@
   "dependencies": {
     "@google/generative-ai": "^0.21.0",
     "clsx": "^2.1.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
     "framer-motion": "^11.0.0",
     "lucide-react": "^0.344.0",
+    "mongoose": "^8.2.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
