--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,4 @@
-VITE_GROQ_API_KEY=your_groq_key_here
-VITE_GEMINI_API_KEY=your_gemini_key_here
-VITE_DEEPGRAM_API_KEY=your_deepgram_key_here
-VITE_AZURE_SPEECH_KEY=your_azure_key_here
+VITE_GROQ_API_KEY=your_groq_api_key_here
+VITE_AZURE_SPEECH_KEY=your_azure_speech_key_here
 VITE_AZURE_SPEECH_REGION=centralindia
+VITE_API_URL=http://localhost:5000/api
