--- a/vercel.json
+++ b/vercel.json
@@ -6,6 +6,10 @@
     "framework": "vite",
     "rewrites": [
         {
+            "source": "/supabase/:path*",
+            "destination": "https://ywvqvldqlowloxrpldss.supabase.co/:path*"
+        },
+        {
             "source": "/api/(.*)",
             "destination": "/api/index.js"
         },
